Inicio da função atualizar peça
